--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,8 @@
     "@babel/core": "^7.12.10",
     "@babel/runtime": "^7.12.5",
     "babel-plugin-module-resolver": "^4.0.0",
-    "metro-react-native-babel-preset": "^0.64.0"
+    "metro-react-native-babel-preset": "^0.64.0",
+    "@types/react": "^16.9.19",
+    "@types/react-native": "^0.62.13"
   }
 }
