change example app

--- a/example/app.json
+++ b/example/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "EspIdfBleProvisioningRnExample",
-  "displayName": "EspIdfBleProvisioningRn Example"
+  "name": "testApp",
+  "displayName": "testApp"
 }
