--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,6 +1,3 @@
-rootProject.name = 'EspIdfBleProvisioningRnExample'
+rootProject.name = 'testApp'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
-
-include ':reactnativeespidfbleprovisioningrn'
-project(':reactnativeespidfbleprovisioningrn').projectDir = new File(rootProject.projectDir, '../../android')
