--- a/example/package.json
+++ b/example/package.json
@@ -1,23 +1,30 @@
 {
-  "name": "react-native-esp-idf-ble-provisioning-rn-example",
-  "description": "Example app for react-native-esp-idf-ble-provisioning-rn",
+  "name": "testapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start"
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react": "17.0.1",
+    "react-native": "0.64.2",
+    "react-native-esp-idf-ble-provisioning-rn": "^0.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
-    "babel-plugin-module-resolver": "^4.0.0",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "7.14.0",
+    "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
-    "@types/react": "^16.9.19",
-    "@types/react-native": "^0.62.13"
+    "react-test-renderer": "17.0.1"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
